app/src/main/java/com/example/bookclub/errors/StartAndEndDateNotValidException.java
package com.example.bookclub.errors;

public class StartAndEndDateNotValidException extends RuntimeException {
    public StartAndEndDateNotValidException() {
        super("StartDate and EndDate not valid");
    }
}
